# qemu-raspi-pico-tutorial

./: .gitignore  README.md  TODO.md
01-install-qemu-pipico1/: README.md
02-install-pico-sdk/: README.md
02-install-pico-sdk/my-first-pico-code/: CMakeLists.txt  main.c
03-hello-world-uart0/: README.md
04-hello-world-core1/: README.md
04-hello-world-core1/hello-core1/: CMakeLists.txt  main.c
05-reboot-counter-flash/: README.md
05-reboot-counter-flash/reboot-counter/: CMakeLists.txt  main.c
06-board-unique-id/: README.md
06-board-unique-id/unique-board-id/: CMakeLists.txt  main.c
07-random-seed/: README.md
07-random-seed/rng-eight-bytes/: CMakeLists.txt  main.c
